# cafe_app

./: manage.py  pyproject.toml
api/v1/: filters.py  mixins.py  serializers.py  urls.py  views.py
cafe_app/: asgi.py  settings.py  urls.py  wsgi.py
core/: constants.py
orders/: admin.py  models.py  signals.py
orders/migrations/: 0001_initial.py
